Introduced support for pull and push (no UI yet, just menu items)

--- a/src/main/java/hu/distributeddocumentor/gui/MainWindow.form
+++ b/src/main/java/hu/distributeddocumentor/gui/MainWindow.form
@@ -52,6 +52,29 @@
             </MenuItem>
           </SubComponents>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="synchronizeMenu">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Synchronize"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="pullMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Download changes"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pullMenuItemActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="pushMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Upload changes"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pushMenuItemActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
       </SubComponents>
     </Menu>
   </NonVisualComponents>
