--- a/src/main/java/hu/distributeddocumentor/gui/WikiMarkupEditor.form
+++ b/src/main/java/hu/distributeddocumentor/gui/WikiMarkupEditor.form
@@ -54,6 +54,7 @@
     </Container>
     <Container class="javax.swing.JToolBar" name="toolBar">
       <Properties>
+        <Property name="floatable" type="boolean" value="false"/>
         <Property name="rollover" type="boolean" value="true"/>
       </Properties>
 
