--- a/src/main/java/hu/distributeddocumentor/gui/SnippetManagerPanel.form
+++ b/src/main/java/hu/distributeddocumentor/gui/SnippetManagerPanel.form
@@ -77,6 +77,7 @@
                 <StringItem index="4" value="Item 5"/>
               </StringArray>
             </Property>
+            <Property name="dragEnabled" type="boolean" value="true"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="snippetListMouseClicked"/>
