Initial spell checker support (not finished yet) (Issue #33)

--- a/src/main/java/hu/distributeddocumentor/gui/WikiMarkupEditor.form
+++ b/src/main/java/hu/distributeddocumentor/gui/WikiMarkupEditor.form
@@ -43,12 +43,16 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JEditorPane" name="editorPane">
+        <Component class="javax.swing.JTextPane" name="editorPane">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Monaco" size="13" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="editorPaneFocusGained"/>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="editorPaneFocusLost"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
