Suggestions for spell checker (Issue #33)

--- a/src/main/java/hu/distributeddocumentor/gui/WikiMarkupEditor.form
+++ b/src/main/java/hu/distributeddocumentor/gui/WikiMarkupEditor.form
@@ -50,6 +50,7 @@
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="editorPaneMousePressed"/>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="editorPaneFocusGained"/>
             <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="editorPaneFocusLost"/>
           </Events>
