Implemented automatic scrolling of HTML preview (Issue #39)

--- a/src/main/java/hu/distributeddocumentor/gui/WikiMarkupEditor.form
+++ b/src/main/java/hu/distributeddocumentor/gui/WikiMarkupEditor.form
@@ -52,6 +52,7 @@
           <Events>
             <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="editorPaneMouseReleased"/>
             <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="editorPaneMousePressed"/>
+            <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="editorPaneCaretUpdate"/>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="editorPaneFocusGained"/>
             <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="editorPaneFocusLost"/>
           </Events>
