Code cleanup and added maven site generation

--- a/src/main/java/hu/distributeddocumentor/gui/CreateNewPageDialog.form
+++ b/src/main/java/hu/distributeddocumentor/gui/CreateNewPageDialog.form
@@ -65,7 +65,7 @@
                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbMarkupLanguage" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="20" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="cancelButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="okButton" alignment="3" min="-2" max="-2" attributes="0"/>
