Initial implementation of page properties with page rename functionality (Issue #56)

--- a/src/main/java/hu/distributeddocumentor/gui/TableOfContentsView.form
+++ b/src/main/java/hu/distributeddocumentor/gui/TableOfContentsView.form
@@ -21,6 +21,14 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miOpenActionPerformed"/>
           </Events>
         </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="miProperties">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Properties"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miPropertiesActionPerformed"/>
+          </Events>
+        </MenuItem>
         <MenuItem class="javax.swing.JMenuItem" name="miCreateNewPage">
           <Properties>
             <Property name="text" type="java.lang.String" value="Create new page..."/>
